output/case4_generate_custom_500.log
  File "/home/azureuser/divakar_projects/cuda_graph_sharing/case4_ipc_20250130/generate_500_tokens.py", line 109
    steps = max_new_tokens
    ^
IndentationError: expected an indented block after 'if' statement on line 107
